# spotify-ai-playlist-generator

./: .gitignore  README.md  render.yaml  setup.sh
backend/: debug_run.py  env.example  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  models.py
backend/app/core/: config.py
backend/app/langgraph/: __init__.py  agent.py  models.py  prompts.py  state.py  tools.py
backend/app/langgraph_agent/: __init__.py  agent.py  prompts.py  state.py  tools.py
backend/app/routers/: api.py  auth.py  chat.py
backend/app/services/: auth_service.py  spotify_service.py  token_manager.py  user_service.py
backend/tests/: conftest.py
backend/tests/langgraph/: test_add_tracks_to_playlist.py  test_create_playlist.py  test_get_artist_top_tracks.py  test_get_available_genres.py  test_get_playlist_tracks.py  test_get_track_recommendations.py  test_get_user_info.py  test_search_artists.py  test_search_tracks.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/src/: AboutButton.css  AboutButton.tsx  AnimatedInstructions.css  AnimatedInstructions.tsx  App.css  App.tsx  ChatInterface.css  ChatInterface.tsx  PlaylistContext.tsx  PlaylistTrack.tsx  Sidebar.css  Sidebar.tsx  ThemeContext.tsx  ToolCallStatus.css  ToolCallStatus.tsx  chatApi.ts  index.css  mockChatApi.ts  vite-env.d.ts
frontend/tests/: chat.spec.ts
